second commit - toggle and food cart

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="#Home" onclick="toggleSidebar()">Home</a>
                     <a href="https://www.facebook.com/profile.php?id=100083774568391" onclick="toggleSidebar()">Inquire Now</a>
                     <a href="#About-Us" onclick="toggleSidebar()">About Us</a>
-                    <a href="#main3-id" onclick="toggleSidebar()">Food Cart</a>
+                    <a href="#Food-Cart" onclick="toggleSidebar()">Food Cart</a>
                     <a href="#Franchising" onclick="toggleSidebar()">Franchising</a>
                     <a href="#Seminars" onclick="toggleSidebar()">Seminars</a>
                     <a href="#Vision-&-Mission" onclick="toggleSidebar()">Vision & Mission</a>
@@ -51,7 +51,7 @@
                     <img src="OneTime-images/logo.png" alt="OneTime Logo">
                 </div>
                 <div class="choices">
-                    <a href="#main3-id">Food Cart</a>
+                    <a href="#Food-Cart">Food Cart</a>
                     <a href="#Franchising">Franchising</a>
                     <a href="#Seminars">Seminars</a>
                     <a href="#Vision-&-Mission">Vision & Mission</a>
@@ -84,7 +84,7 @@
             </div>
         </div>
     </div>
-    <h1 style="text-align: center; font-size: clamp(2rem, 3vw, 3rem); color: #29176d;"><span style="color: #f4b312;">Food</span> Cart</h1>
+    <h1 id="Food-Cart" style="text-align: center; font-size: clamp(2rem, 3vw, 3rem); color: #29176d;"><span style="color: #f4b312;">Food</span> Cart</h1>
     <p style="margin-bottom: 3rem; text-align: center; font-size: clamp(1.2rem, 3vw, 1.2rem);">Exquisite, quality-driven food carts.</p>
     <div class="main3">
         <div class="wrapper">
